Seperate out UI and Instrument elements

--- a/InstrumentControl/CMakeLists.txt
+++ b/InstrumentControl/CMakeLists.txt
@@ -1,3 +1,6 @@
+
+
+
 cmake_minimum_required(VERSION 2.8.10)
 
 project(InstrumentControl)
@@ -5,12 +8,10 @@ project(InstrumentControl)
 cmake_policy(SET CMP0020 NEW)
 cmake_policy(SET CMP0043 NEW)
 
+find_package(OpenCV REQUIRED)
+
 find_package(Qt5Widgets REQUIRED)
 find_package(Qt5SerialPort REQUIRED)
-
-qt5_wrap_ui(UI_HEADERS ImageRenderWindow.ui)
-
-#qt5_add_resources(UI_RESOURCES PuppetMasterResources.qrc)
 
 set(CMAKE_AUTOMOC ON)
 
@@ -19,8 +20,6 @@ set(SOURCE
    SerialDevice.cpp
    GenericNewportController.cpp
    ThorlabsAPTController.cpp
-   ImageSource.cpp
-   ImageRenderWidget.cpp
 )
 
 
@@ -34,10 +33,6 @@ set(HEADERS
    ThreadedObject.h
    FTD2XX.h
    ThorlabsAPTController.h
-   ControlBinder.h
-   ImageSource.h
-   ImageRenderWidget.h
-   ImageRenderWindow.h
 )
 
 # manually add include directories since we're not linking libraries in
@@ -46,6 +41,6 @@ INCLUDE_DIRECTORIES(${Qt5Widgets_INCLUDE_DIRS} ${Qt5SerialPort_INCLUDE_DIRS})
 
 set(InstrumentControl_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR} PARENT_SCOPE)
 
-add_library(InstrumentControl OBJECT ${SOURCE} ${HEADERS})
+add_library(InstrumentControl OBJECT ${SOURCE} ${HEADERS} ${UI_HEADERS})
 
-set(InstrumentControl_LIBRARIES ${CMAKE_CURRENT_SOURCE_DIR}/ftd2xx.lib PARENT_SCOPE)
+set(InstrumentControl_LIBRARIES ${CMAKE_CURRENT_SOURCE_DIR}/ftd2xx.lib ${OpenCV_LIBS} PARENT_SCOPE)
