--- a/InstrumentControlTest/CMakeLists.txt
+++ b/InstrumentControlTest/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.0)
 
-project(ArduinoCounterTest)
+project(InstrumentControlTest)
+
+find_package(OpenCV REQUIRED)
 
 cmake_policy(SET CMP0020 NEW)
 cmake_policy(SET CMP0043 NEW)
@@ -15,21 +17,21 @@ find_package(Qt5Designer REQUIRED)
 
 set(CMAKE_AUTOMOC ON)
 
-include_directories(${ArduinoCounter_INCLUDE_DIR} ${COMMON_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${QT_CUSTOM_WIDGETS_INCLUDE_DIR})
+include_directories(${InstrumentControl_INCLUDE_DIR} ${COMMON_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${QT_CUSTOM_WIDGETS_INCLUDE_DIR})
 
 qt5_wrap_ui(UI_HEADERS ArduinoCounterTest.ui)
 
-add_executable(ArduinoCounterTest ArduinoCounterTest.h ArduinoCounterTest.cpp ${UI_HEADERS} $<TARGET_OBJECTS:ArduinoCounter>)
+add_executable(InstrumentControlTest ArduinoCounterTest.h ArduinoCounterTest.cpp ${UI_HEADERS} $<TARGET_OBJECTS:InstrumentControl>)
 
-qt5_use_modules(ArduinoCounterTest Widgets PrintSupport OpenGL Gui SerialPort)
+qt5_use_modules(InstrumentControlTest Widgets PrintSupport OpenGL Gui SerialPort)
 
-set_target_properties(ArduinoCounterTest PROPERTIES LINK_FLAGS "/NODEFAULTLIB:library" )
+set_target_properties(InstrumentControlTest PROPERTIES LINK_FLAGS "/NODEFAULTLIB:library" )
 
-target_link_libraries(ArduinoCounterTest
+target_link_libraries(InstrumentControlTest
                       QTDesignerPlugins
                       Qt5::Widgets 
                       Qt5::PrintSupport
                       Qt5::OpenGL 
                       Qt5::Gui
                       Qt5::SerialPort
-                      ${ArduinoCounter_LIBRARIES})
+                      ${InstrumentControl_LIBRARIES})
