--- a/InstrumentControlUI/CMakeLists.txt
+++ b/InstrumentControlUI/CMakeLists.txt
@@ -16,23 +16,21 @@ qt5_wrap_ui(UI_HEADERS ImageRenderWindow.ui)
 set(CMAKE_AUTOMOC ON)
 
 set(SOURCE
-   ImageSource.cpp
    ImageRenderWidget.cpp
 )
 
 
 set(HEADERS
    ControlBinder.h
-   ImageSource.h
    ImageRenderWidget.h
    ImageRenderWindow.h
 )
 
 # manually add include directories since we're not linking libraries in
 # this module
-INCLUDE_DIRECTORIES(${Qt5Widgets_INCLUDE_DIRS} ${Qt5SerialPort_INCLUDE_DIRS})
+INCLUDE_DIRECTORIES(${Qt5Widgets_INCLUDE_DIRS} ${Qt5SerialPort_INCLUDE_DIRS} ${InstrumentControl_INCLUDE_DIR})
 
-set(InstrumentControlUI_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR} PARENT_SCOPE)
+set(InstrumentControlUI_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR} ${InstrumentControl_INCLUDE_DIR} PARENT_SCOPE)
 
 add_library(InstrumentControlUI OBJECT ${SOURCE} ${HEADERS} ${UI_HEADERS})
 
