Adding constraints of size of ImageRenderWidget (need to propogate to ImageRenderWindow)

--- a/InstrumentControlUI/CMakeLists.txt
+++ b/InstrumentControlUI/CMakeLists.txt
@@ -29,6 +29,7 @@ set(HEADERS
    ImageSeriesControl.h
    ImageSeriesScanner.h
    ParameterWidget.h
+   ConstrainedMdiSubWindow.h
 )
 
 # manually add include directories since we're not linking libraries in
