--- a/InstrumentControlUI/CMakeLists.txt
+++ b/InstrumentControlUI/CMakeLists.txt
@@ -34,7 +34,7 @@ set(HEADERS
 
 # manually add include directories since we're not linking libraries in
 # this module
-INCLUDE_DIRECTORIES(${Qt5Widgets_INCLUDE_DIRS} ${Qt5SerialPort_INCLUDE_DIRS} ${InstrumentControl_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${Qt5Widgets_INCLUDE_DIRS} ${Qt5SerialPort_INCLUDE_DIRS} ${InstrumentControl_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
 
 set(InstrumentControlUI_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR} ${InstrumentControl_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR} PARENT_SCOPE)
 
