Allow binding control to property

--- a/InstrumentControlUI/CMakeLists.txt
+++ b/InstrumentControlUI/CMakeLists.txt
@@ -22,6 +22,10 @@ set(SOURCE
 
 set(HEADERS
    ControlBinder.h
+   BoundControl.h
+   BoundControlImpl.h
+   BoundPropertyControl.h
+   BoundPropertyControlImpl.h
    ImageRenderWidget.h
    ImageRenderWindow.h
    ImageSeriesControl.h
